Fix #35730: cycles not rendering dupliverted metaball, needs another special exception.